# MC1.12.10

./: .gitignore  README.md  config.yml  fabric-server-launcher.properties  permission.yml  pyproject.toml
.github/workflows/: static.yml
MinecraftStats-TerrashiftNET/: config.json  run.sh
MinecraftStats-TerrashiftNET/Web/: style.min.css
MinecraftStats-TerrashiftNET/Web/data/: players.json
MinecraftStats-TerrashiftNET/Web/data/playercache/: 02.json  1c.json  20.json  26.json  33.json  55.json  60.json  72.json  78.json  7a.json  82.json  95.json  cc.json  db.json  dc.json  e2.json  f1.json
MinecraftStats-TerrashiftNET/Web/data/playerdata/: 02cfc44a-a7ff-4ada-94e9-23d9fee52e68.json  1c92c4a7-efb2-3315-a66b-dbd62c0e0fcc.json  20017ca5-15fe-4708-8935-63db33af58ef.json  26d37251-facb-34ca-957c-d7b4bfb21e47.json  (+13 more)
MinecraftStats-TerrashiftNET/Web/js/: mcstats.min.js  mcstats.min.js.map
config/StatsHelper/: config.json  quick_scoreboard.json  uuid.json
config/gamemode/: config.json  data.json
config/info/: config.json
config/mcdreforged/: catalogue_meta_cache.json.xz
config/minecraft_data_api/: config.json
config/prime_backup/: config.json
config/simple_calculator/: config.json
server/: eula.txt  fabric-server-launcher.properties  ops.json  server.properties  start.sh  usercache.json
server/config/: quickshulkerconfig.json5  servux.json
server/config/carpettisaddition/: logger_subscriptions.json
server/crash-reports/: crash-2025-12-28_16.57.27-server.txt  crash-2025-12-28_17.00.37-server.txt  crash-2025-12-28_17.23.21-server.txt
(+159 files in other folders)
