[project]
name = "1-21-10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.1",
    "hjson>=3.1.0",
    "mcdreforged>=2.15.5",
    "py-cpuinfo>=9.0.0",
    "pytz>=2025.2",
    "simpleeval>=1.0.3",
    "sqlalchemy>=2.0.44",
    "xxhash>=3.6.0",
    "zstandard>=0.25.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
